<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_settings_frequency_title"
        android:text="@string/text_settings_messaging_frequency"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <EditText
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_settings_frequency"
        android:inputType="numberSigned"
        android:hint="@string/text_hint_frequency"
        android:ems="10"
        android:maxLength="2"
        android:layout_below="@+id/text_settings_frequency_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_settings_notifications_title"
        android:text="@string/text_settings_notifications"
        android:layout_below="@+id/text_settings_frequency"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_settings_sound_title"
        android:text="@string/text_settings_sound"
        android:layout_below="@+id/switch_notifications"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_notifications"
        android:layout_below="@+id/text_settings_notifications_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_sound"
        android:layout_below="@+id/text_settings_sound_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save"
        android:background="@android:color/transparent"
        android:text="@string/btn_save"
        android:layout_below="@+id/switch_sound"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        />
</RelativeLayout>