<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/toolbar_background_light">



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_user_name"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="@string/text_hint_user_name"
        android:textColorHint="@color/hivet_light_gray"
        android:textColor="@color/hivet_white"
        android:textSize="24sp"
        android:gravity="center"
        />

    <Button
        android:text="@string/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_user_name"
        android:layout_centerHorizontal="true"
        android:background="@android:color/transparent"
        android:textColor="@color/hivet_white"
        android:id="@+id/btn_login"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_enable_gps"
        android:text="@string/text_enable_gps"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="91dp"
        android:textColor="@color/hivet_dark_red"
        android:visibility="gone"
        />
</RelativeLayout>