<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/hivet_light_gray">

    <RelativeLayout
        android:id="@+id/layout_control_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hivet_white"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            android:id="@+id/btn_send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_menu_send"
            android:contentDescription="@string/content_desc_send" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_message"
            android:layout_marginLeft="10dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/btn_send_message"
            android:layout_toStartOf="@+id/btn_send_message"
            android:ems="10"
            android:hint="@string/text_hint_enter_message"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_empty_chat"
        android:text="@string/text_empty_chat"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/list_chat"
        android:layout_above="@+id/layout_control_container"
        tools:listitem="@layout/list_item_message_right_side"
        />
</RelativeLayout>