<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingTop="5dp"
    android:paddingLeft="10dp">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/layout_left_message_container"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="76dp"
            android:layout_height="76dp"
            android:src="@drawable/profile"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_user_name"
            android:text="@string/text_user_name"
            android:gravity="center"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/profile_image"
            android:layout_alignEnd="@+id/profile_image"
            android:layout_below="@+id/profile_image"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_date_time"
            android:text="@string/text_timestamp_sample"
            android:gravity="center"
            android:layout_below="@+id/text_user_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/text_message_field"
            android:layout_toStartOf="@+id/text_message_field"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_message_field"
            android:text="@string/text_lorem_ipsum"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/profile_image"
            android:padding="10dp"
            android:background="@drawable/shape_message_from"
            />

    </RelativeLayout>
</RelativeLayout>